--- a/javascript/browser/http/app/index.html
+++ b/javascript/browser/http/app/index.html
@@ -7,6 +7,23 @@
 
   <title>Datadog APM Example</title>
 
+<script
+  src="https://www.datadoghq-browser-agent.com/datadog-rum.js"
+  type="text/javascript">
+</script>
+<script>
+  window.DD_RUM && window.DD_RUM.init({
+      applicationId: 'b43964c6-524c-4905-bf79-e77fa10d007d',
+      clientToken: 'puba45824a7f464b1073462d78381dd8f9a',
+      site: 'datadoghq.com',
+      service: 'teastore-aks',
+      //  env: 'production',
+      //  version: '1.0.0',
+      sampleRate: 100,
+      trackInteractions: true
+  });
+</script>
+
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -21,9 +38,7 @@
     </div>
   </div>
 
-  <script src="dd-trace/dd-trace.min.js"></script>
   <script>
-    load()
 
     ddtrace.tracer.init({
       experimental: {
@@ -38,23 +53,6 @@
     document.getElementById('fetch').addEventListener('click', function () {
       window.fetch('http://localhost:8080/users')
     })
-
-    function load () {
-      const req = get('env', false)
-
-      if (req.status === 200) {
-        req.responseText.split('\n')
-          .filter(pair => !!pair)
-          .map(pair => pair.split('='))
-          .forEach(pair => {
-            window[pair[0]] = pair[1]
-          })
-      }
-
-      if (!window.DD_CLIENT_TOKEN) {
-        console.log('Please create a .env file with DD_CLIENT_TOKEN set to your client token.')
-      }
-    }
 
     function get (url, async) {
       const req = new XMLHttpRequest()
